corrections donnée par correction étape 1-6